# trip-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/agents/: base_agent.py
src/agents/choose_destination_place_agent/: agent.py
src/graph/: compile_graph.py
src/graph/nodes/: choose_destination_place_node.py
src/graph/states/: general_state.py
src/types/: flight_option.py
src/utils/: logger.py
trip_assistant/: main.py
trip_assistant/agents/: base_agent.py
trip_assistant/agents/choose_destination_place_agent/: agent.py
trip_assistant/agents/create_itinerary_agent/: agent.py
trip_assistant/agents/search_flights_agent/: agent.py
trip_assistant/config/: __init__.py
trip_assistant/graph/: compile_graph.py
trip_assistant/graph/nodes/: choose_destination_place_node.py  create_itinerary_node.py  search_flights_node.py
trip_assistant/graph/states/: general_state.py
trip_assistant/types/: destination_option.py
trip_assistant/utils/: logger.py
